--- a/app/src/main/res/layout/fragment_empty_home.xml
+++ b/app/src/main/res/layout/fragment_empty_home.xml
@@ -35,9 +35,9 @@
         android:id="@+id/empty_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="350dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="280dp"
         android:text="@string/empty_home"
         android:textAlignment="center"
         android:textColor="#2F80ED"
@@ -48,9 +48,9 @@
         android:id="@+id/btnPreferences"
         android:layout_width="268dp"
         android:layout_height="49dp"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="167dp"
+        android:layout_marginTop="450dp"
         android:background="@drawable/btn_ripple_preferences"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
