--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,52 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
+    android:gravity="center"
+    android:orientation="vertical"
     tools:context=".LoginActivity">
 
     <ImageView
         android:id="@+id/mainLogo"
         android:layout_width="286dp"
         android:layout_height="314dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:contentDescription="@string/app_name"
-        android:src="@drawable/wannaplay_logo"
-        tools:layout_editor_absoluteX="109dp"
-        tools:layout_editor_absoluteY="34dp" />
+        android:src="@drawable/wannaplay_logo" />
 
     <ImageView
         android:id="@+id/slogan"
         android:layout_width="350dp"
         android:layout_height="64dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="296dp"
         android:contentDescription="@string/slogan"
         android:src="@drawable/slogan" />
 
     <Button
-        android:id="@+id/btnLogin"
+        android:id="@+id/login_button"
         android:layout_width="320dp"
         android:layout_height="50dp"
-        android:layout_below="@+id/slogan"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:background="@drawable/btn_signin_facebook"
         android:textColor="#FFFFFF"
         android:textSize="14sp"
         android:textStyle="bold" />
 
+    <!---
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/login_button"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="8dp"
+        android:background="@drawable/btn_facebook"
+        android:textSize="18sp" />-->
+
+
     <ImageView
         android:id="@+id/copy"
         android:layout_width="163dp"
         android:layout_height="46dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="19dp"
+        android:layout_marginTop="130dp"
         android:contentDescription="@string/copyright"
         android:src="@drawable/copyright" />
 
-</android.widget.RelativeLayout>
+</LinearLayout>
