--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backgroundColor"
+    android:background="@drawable/home_background"
+    android:gravity="center"
     android:paddingTop="-5dp">
 
     <!-- Welcome Message -->
@@ -12,7 +13,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
         android:fontFamily="sans-serif-light"
         android:textStyle="bold"
         android:textSize="35dp"
@@ -23,7 +23,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="60dp"
         android:text="@string/register_message"
         android:lines="3"
         android:layout_centerHorizontal="true"
@@ -36,7 +36,7 @@
         android:layout_width="match_parent"
         android:textAlignment="center"
         android:layout_height="wrap_content"
-        android:layout_marginTop="190dp"
+        android:layout_marginTop="140dp"
         android:text="@string/abilities_register"
         android:textColor="@color/colorAccent"
         android:textSize="18sp" />
@@ -45,7 +45,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="240dp"
+        android:layout_marginTop="180dp"
         android:baselineAligned="false"
         android:gravity="center_vertical|center_horizontal"
         android:orientation="horizontal">
@@ -99,7 +99,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_marginTop="330dp"
+        android:layout_marginTop="260dp"
         android:text="@string/birth_register"
         android:textColor="@color/colorAccent"
         android:textSize="18sp" />
@@ -109,7 +109,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_marginTop="365dp"
+        android:layout_marginTop="295dp"
         android:hint="@string/birth_pick_register"
         android:textColorHint="@color/DisabledColor"
         android:textColor="@color/textColor"
@@ -119,10 +119,23 @@
         android:layout_width="match_parent"
         android:textAlignment="center"
         android:layout_height="wrap_content"
-        android:layout_marginTop="400dp"
+        android:layout_marginTop="325dp"
         android:text="@string/birth_desc_register"
         android:textColor="@color/textColor"
         android:textSize="10sp" />
+
+    <Button
+        android:id="@+id/finish_button"
+        android:layout_width="268dp"
+        android:layout_height="49dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="390dp"
+        android:background="@drawable/btn_ripple_finalizar"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="14sp"
+        android:textStyle="bold" />
 
 
 </RelativeLayout>
