--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,26 +7,38 @@
     android:gravity="center"
     android:paddingTop="-5dp">
 
-    <!-- Welcome Message -->
+    <!-- Welcome -->
     <TextView
         android:id="@+id/welcome_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:fontFamily="sans-serif-light"
-        android:textStyle="bold"
-        android:textSize="35dp"
-        android:text="OLÁ USUÁRIO!"
+        android:text="@string/registerHello"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-        android:textColor="#2F80ED" />
+        android:textColor="#2F80ED"
+        android:textSize="35dp"
+        android:textStyle="bold" />
+
+    <!-- Almost done message -->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="60dp"
+        android:lines="1"
+        android:text="@string/registerMessage1"
+        android:textAlignment="center"
+        android:textColor="@color/textColor"
+        android:textSize="13sp" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:text="@string/register_message"
-        android:lines="3"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="75dp"
+        android:lines="1"
+        android:text="@string/registerMessage2"
         android:textAlignment="center"
         android:textColor="@color/textColor"
         android:textSize="13sp" />
@@ -34,10 +46,10 @@
     <!-- Label -->
     <TextView
         android:layout_width="match_parent"
-        android:textAlignment="center"
         android:layout_height="wrap_content"
         android:layout_marginTop="140dp"
-        android:text="@string/abilities_register"
+        android:text="@string/registerHabilities"
+        android:textAlignment="center"
         android:textColor="@color/colorAccent"
         android:textSize="18sp" />
 
@@ -63,8 +75,8 @@
             android:id="@+id/guitar_checkbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="15dp"
             android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:button="@drawable/guitar_icon" />
 
         <!-- Bass Checkbox -->
@@ -72,8 +84,8 @@
             android:id="@+id/bass_checkbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="15dp"
             android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:button="@drawable/bass_icon" />
 
         <!-- Drum Checkbox -->
@@ -81,8 +93,8 @@
             android:id="@+id/drum_checkbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="15dp"
             android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:button="@drawable/drum_icon" />
 
         <!-- Others Checkbox -->
@@ -98,9 +110,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:layout_marginTop="260dp"
-        android:text="@string/birth_register"
+        android:gravity="center"
+        android:text="@string/registerBirth"
         android:textColor="@color/colorAccent"
         android:textSize="18sp" />
 
@@ -108,30 +120,30 @@
         android:id="@+id/date_select"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:layout_marginTop="295dp"
-        android:hint="@string/birth_pick_register"
-        android:textColorHint="@color/DisabledColor"
+        android:gravity="center"
+        android:hint="@string/registerBirthPicker"
         android:textColor="@color/textColor"
+        android:textColorHint="@color/DisabledColor"
         android:textSize="18sp" />
 
     <TextView
         android:layout_width="match_parent"
-        android:textAlignment="center"
         android:layout_height="wrap_content"
         android:layout_marginTop="325dp"
-        android:text="@string/birth_desc_register"
+        android:text="@string/registerBirthDescription"
+        android:textAlignment="center"
         android:textColor="@color/textColor"
-        android:textSize="10sp" />
+        android:textSize="12sp" />
 
     <Button
-        android:id="@+id/finish_button"
+        android:id="@+id/registerFinishBtn"
         android:layout_width="268dp"
         android:layout_height="49dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="390dp"
-        android:background="@drawable/btn_ripple_finalizar"
+        android:background="@drawable/btn_ripple_finish"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="14sp"
