--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -32,13 +32,13 @@
         tools:layout_editor_absoluteY="34dp" />
 
     <TextView
-        android:id="@+id/empty_home"
+        android:id="@+id/homeFilterResultTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="280dp"
-        android:text="@string/empty_home"
+        android:text="@string/homeFilterResultTxt1"
         android:textAlignment="center"
         android:textColor="#2F80ED"
         android:fontFamily="sans-serif-light"
